# aliasMesh

./: .gitignore  CMakeLists.txt  build.bat  run.lnk
header/: MaskReMesh.h
src/: MaskReMesh.cpp  main.cpp
